# RedisCrunchChallenge

./: .dockerignore  .gitignore  README.md  RESULTS.md  docker-compose.yml  populate.lua  stats.rb  stats_last.sh
.docker/: Dockerfile.clojure  Dockerfile.elixir  Dockerfile.golang  Dockerfile.node  Dockerfile.ruby  Dockerfile.ruby_v2  Dockerfile.rust
.scripts/: populate  seed.lua  stats  summarize.rb
c/: Dockerfile  Makefile  worker.c
clojure/: Dockerfile  deps.edn
clojure/src/: main.clj
dotnet/: Dockerfile  Program.cs  dotnet.csproj
elixir/: Dockerfile  mix.exs  worker.exs
elixir/config/: config.exs
elixir/lib/: redis_crunch_challenge.ex
elixir/lib/mix/tasks/: process.ex
elixir/lib/redis_crunch_challenge/: broadway.ex  core_processor.ex  csv_writter.ex  data_source.ex  flow.ex
elixir/lib/redis_crunch_challenge/gen_server/: supervisor.ex  worker.ex
elixir/lib/redis_crunch_challenge/gen_stage/: consumer.ex  producer.ex  supervisor.ex
golang/: Dockerfile  Makefile  go.mod  main.go
js/: index-workers.js  index.js  package-lock.json  package.json  runner.sh  worker.js
luajit/: Dockerfile  luajit-dev-1.rockspec  main.lua
node/: Dockerfile  index-workers.js  index.js  package-lock.json  package.json  worker.js
python/: Dockerfile  process.py  requirements.txt
ruby/: Dockerfile  Gemfile  runner.sh  worker.rb
ruby_async/: Dockerfile  Gemfile  worker.rb
ruby_v2/: Dockerfile  Gemfile  runner.sh  worker.rb
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
