[package]
name = "rust"
version = "0.1.0"
authors = ["Yury Solovyov <invokedynamic@yandex.com>"]
edition = "2018"

[dependencies]
futures = "0.3.6"
tokio = { version = "0.2.22", features = ["macros", "sync", "rt-threaded", "stream"] }
redis = { version = "0.17.0", features = [] }
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1.0.58"
md5 = "0.7.0"
csv = "1.1.3"
libmath = "0.2.1"

[profile.release]
lto = true
