[package]
name = "rust"
version = "0.1.0"
authors = ["Yury Solovyov <invokedynamic@yandex.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.25.0", features = ["macros", "sync", "rt-multi-thread"] }
redis = { version = "0.22.3", features = [] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
md5 = "0.7.0"
csv = "1.2.0"
libmath = "0.2.1"

[profile.release]
lto = true
