[package]
name = "rust"
version = "0.1.0"
authors = ["Yury Solovyov <invokedynamic@yandex.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["macros", "sync", "rt-multi-thread"] }
redis = { version = "0.25.4", features = ["tokio-comp"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
md5 = "0.7.0"
csv = "1.3.0"
libmath = "0.2.1"
crossbeam-channel = "0.5.13"

[profile.release]
lto = true
codegen-units = 1
